[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/ai/chase_and_shoot/chase_and_shoot.gd" type="Script" id=1]

[node name="chase_and_shoot" type="Node2D"]
script = ExtResource( 1 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PatrolDuration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="PatrolDuration" to="." method="_on_PatrolDuration_timeout"]
